fix layout bug on work page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -194,7 +194,7 @@ img {
   .large-only {
     display: none; } }
 
-.home-wrapper {
+.wrapper {
   width: 100%;
   overflow-x: hidden; }
 
