--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -112,7 +112,7 @@ img {
   }
 }
 
-.home-wrapper {
+.wrapper {
   width: 100%;
   overflow-x: hidden;
 }
